--- a/TareaProg4/Views/Contenido/Index.cshtml
+++ b/TareaProg4/Views/Contenido/Index.cshtml
@@ -3,5 +3,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Contenidos</h2>
+
+<p>
+    <a href="/Personal/Peliculas">Peliculas</a>
+
+</p>
 
