--- a/TareaProg4/Views/Contenido/Index.cshtml
+++ b/TareaProg4/Views/Contenido/Index.cshtml
@@ -6,7 +6,6 @@
 <h2>Contenidos</h2>
 
 <p>
-    <a href="/Personal/Peliculas">Peliculas</a>
-
+    <a href="/Contenido/Peliculas">Peliculas</a>
 </p>
 
