se agregaron los trailers de 5 peliculas de la categoria de Acción

--- a/TareaProg4/Views/PelisCategorias/Accion.cshtml
+++ b/TareaProg4/Views/PelisCategorias/Accion.cshtml
@@ -3,5 +3,39 @@
     ViewBag.Title = "Accion";
 }
 
-<h2>Accion</h2>
+<h2>Accion</h2><br />
 
+<p>
+    <h3>Zoombieland 2</h3> <br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ZlW9yhUKlkQ" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
+<br />
+<p>
+    <h3>Terminator: Destino oscuro</h3> <br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/jZwOU8mxoVg" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
+<br />
+<p>
+    <h3>Escuadron 6</h3> <br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/O_iVsdot1Ho" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
+<br />
+<p>
+    <h3>Rambo last Blood</h3> <br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/4vWg5yJuWfs" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
+<br />
+<p>
+    <h3>Hobbs and Shaw</h3> <br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/HZ7PAyCDwEg" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
