--- a/TareaProg4/Views/PelisCategorias/Accion.cshtml
+++ b/TareaProg4/Views/PelisCategorias/Accion.cshtml
@@ -39,3 +39,7 @@
             frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen></iframe>
 </p>
+
+<p>
+    <h4><a href="/Contenido/Peliculas">Regresar</a></h4>
+</p>
