se agregaron los 5 trailers correspondiente a la vista Infantil

--- a/TareaProg4/Views/PelisCategorias/Infantil.cshtml
+++ b/TareaProg4/Views/PelisCategorias/Infantil.cshtml
@@ -3,5 +3,50 @@
     ViewBag.Title = "Infantil";
 }
 
-<h2>Infantil</h2>
+<h2>Infantil</h2><br />
 
+<p>
+   <h3>Dora y la Ciudad Perdida</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/PCCuJbPz0Oo" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
+<br />
+<p>
+    <h3>El Rey León</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/BfSAvH2fGkE" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
+<br />
+<p>
+    <h3>Toy Story 4</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/wmiIUN-7qhE" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
+<br />
+<p>
+    <h3>La Vida Secreta de tus Mascotas 2</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/rslZ-fHiSuI" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
+<br />
+<p>
+    <h3>Mary Poppins</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/-3jsfXDZLIY" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
+<br />
+<p>
+    <h3>Hotel Transylvania 3</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/7RaXr6h7aQM" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
+<br />
+<p>
+    <h4><a href="/Contenido/Peliculas">Regresar</a></h4>
+</p>
