se agregaron los trailers correspondientes a la vista Aventura

--- a/TareaProg4/Views/PelisCategorias/Drama.cshtml
+++ b/TareaProg4/Views/PelisCategorias/Drama.cshtml
@@ -4,4 +4,28 @@
 }
 
 <h2>Drama</h2>
+<br />
 
+<p>
+    <h3></h3><br />
+</p>
+<br />
+<p>
+    <h3></h3><br />
+</p>
+<br />
+<p>
+    <h3></h3><br />
+</p>
+<br />
+<p>
+    <h3></h3><br />
+</p>
+<br />
+<p>
+    <h3></h3><br />
+</p>
+<br />
+<p>
+    <h4><a href="/Contenido/Peliculas">Regresar</a></h4>
+</p>
