--- a/TareaProg4/Views/PelisCategorias/Aventura.cshtml
+++ b/TareaProg4/Views/PelisCategorias/Aventura.cshtml
@@ -4,4 +4,43 @@
 }
 
 <h2>Aventura</h2>
+<br />
 
+<p>
+    <h3>Abominable</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/goSOXI2XkIA" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
+<br />
+<p>
+    <h3>La Dama y el Vagabundo</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/F_oZlPMG-Lc" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
+<br />
+<p>
+    <h3>Klaus</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/taE3PwurhYM" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
+<br />
+<p>
+    <h3>Angry Birds 2 La Película</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/of5JB7Homk0" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
+<br />
+<p>
+    <h3>MEN IN BLACK: INTERNATIONAL</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/BV-WEb2oxLk" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
+<br />
+<p>
+    <h4><a href="/Contenido/Peliculas">Regresar</a></h4>
+</p>
