--- a/TareaProg4/Views/PelisCategorias/Infantil.cshtml
+++ b/TareaProg4/Views/PelisCategorias/Infantil.cshtml
@@ -3,7 +3,8 @@
     ViewBag.Title = "Infantil";
 }
 
-<h2>Infantil</h2><br />
+<h2>Infantil</h2>
+<br />
 
 <p>
    <h3>Dora y la Ciudad Perdida</h3><br />
