se agregaron los trailes correspondientes a las vistas faltantes

--- a/TareaProg4/Views/PelisCategorias/Documental.cshtml
+++ b/TareaProg4/Views/PelisCategorias/Documental.cshtml
@@ -4,4 +4,42 @@
 }
 
 <h2>Documental</h2>
+<br />
 
+<p>
+    <h3>Western Stars</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/nGqjav-KbDU" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
+<br />
+<p>
+    <h3>Bailando con los pájaros</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/4yRpopFY57c" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
+<br />
+<p>
+    <h3>Michael Jackson's THIS IS IT</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/zUniG6F_RzY" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
+<br />
+<p>
+    <h3>GUATEMALA, Corazón del Mundo Maya</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/O_8On6cf6dc" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
+<br />
+<p>
+    <h3>Reina de elefantes</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/XUwKdsQUcto" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+</p>
+<br />
+<p>
+    <h4><a href="/Contenido/Peliculas">Regresar</a></h4>
+</p>
