--- a/TareaProg4/Views/PelisCategorias/Drama.cshtml
+++ b/TareaProg4/Views/PelisCategorias/Drama.cshtml
@@ -7,23 +7,38 @@
 <br />
 
 <p>
-    <h3></h3><br />
+    <h3>Diamantes en bruto</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/AjAoSWgB6J4" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
 </p>
 <br />
 <p>
-    <h3></h3><br />
+    <h3>Los dos papas</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/epf-XMQ5Q8M" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
 </p>
 <br />
 <p>
-    <h3></h3><br />
+    <h3>GUASON (Joker)</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ZMH8NWf9btw" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
 </p>
 <br />
 <p>
-    <h3></h3><br />
+    <h3>Ad Astra</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/gaf-zgnlNLg" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
 </p>
 <br />
 <p>
-    <h3></h3><br />
+    <h3>El Irlandés</h3><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/B3cJXk9IaH0" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
 </p>
 <br />
 <p>
