--- a/TareaProg4/Views/Shared/_Layout.cshtml
+++ b/TareaProg4/Views/Shared/_Layout.cshtml
@@ -21,9 +21,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Home", "Formulario", "Form")</li>
+                    <li>@Html.ActionLink("Formulario", "Formulario", "Form")</li>
+                    <li>@Html.ActionLink("Datos del Formulario", "Datos", "Form")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
