Llame los datos de la clase campo y los archivos del formulario al controlador. Asimismo llame con @Model estos datos en la vista Datos para que pudieran mostrarse. El boton enviar lleva directamente a esta pagina luego de cumplir satisfactoriamente el formulario. Los documentos cargados por el usuario ya se pueden descargar a la carpeta img y mostrarse en la vista Datos con @ViewBag. Aun hay problemas mostrando el documento pdf en esta vista.

--- a/TareaProg4/Views/Form/Datos.cshtml
+++ b/TareaProg4/Views/Form/Datos.cshtml
@@ -1,7 +1,17 @@
-﻿
+﻿@model TareaProg4.Models.Campos
 @{
     ViewBag.Title = "Datos";
 }
 
 <h2>Datos</h2>
 
+<img src="~/img/@ViewBag.foto" width="400" height="400" />
+<h3>Cedula: @Model.Cedula</h3>
+<h3>Nombre: @Model.Nombre</h3>
+<h3>Apellido: @Model.Apellido</h3>
+<h3>Edad: @Model.Edad</h3>
+<h3>Telefono: @Model.Telefono</h3>
+<h3>Correo: @Model.Correo</h3>
+<h3>Genero: @Model.Genero</h3>
+<h3>Puesto: @Model.Puesto</h3>
+<h3>Curriculum:</h3>
