--- a/TareaProg4/Views/Shared/_Layout.cshtml
+++ b/TareaProg4/Views/Shared/_Layout.cshtml
@@ -17,11 +17,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Application name", "Formulario", "Form", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Formulario", "Form")</li>
                     <li>@Html.ActionLink("Formulario", "Formulario", "Form")</li>
                     <li>@Html.ActionLink("Datos del Formulario", "Datos", "Form")</li>
                 </ul>
