Elimine register y login del nav bar, en el app start route confighice que la pagina comience con el formulario. Cree un nuevo controlador llamado conversorcontroller, un action y una vista llamados opciones, agregue la vista opciones en el nav bar. Dentro de la vista opciones coloque 4 imagenes que representan el menu para entrar al tipo de conversion que el usuario quiera realizar. Ademas cree una carpeta llamada CSS y un documento llamado style.css que afecta la vista opciones.

--- a/TareaProg4/Views/Shared/_Layout.cshtml
+++ b/TareaProg4/Views/Shared/_Layout.cshtml
@@ -17,14 +17,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Formulario", "Form", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Tarea 4", "Formulario", "Form", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Formulario", "Formulario", "Form")</li>
                     <li>@Html.ActionLink("Datos del Formulario", "Datos", "Form")</li>
+                    <li>@Html.ActionLink("Conversor de unidades", "Opciones", "Conversor")</li>
                 </ul>
-                @Html.Partial("_LoginPartial")
+                 
             </div>
         </div>
     </div>
