se cambió la imagen Beat music por la imagen apple music en la carpeta content y se enlazaron todas las imagenes en la vista Musica

--- a/TareaProg4/Views/Contenido/Musica.cshtml
+++ b/TareaProg4/Views/Contenido/Musica.cshtml
@@ -6,5 +6,33 @@
 <h2>Musica</h2>
 <br />
 
-
-
+<p>
+    <a href="">
+        <img src="~/Content/apple music.jpg" width="350" height="300" />
+    </a>
+</p>
+<br />
+<p>
+    <a href="">
+        <img src="~/Content/grooveshark.png" width="350" height="300" />
+    </a>
+</p>
+<br />
+<p>
+    <a href="">
+        <img src="~/Content/Spotify.png" width="350" height="300" />
+    </a>
+</p>
+<br />
+<p>
+    <a href="">
+        <img src="~/Content/deezer.jpg" width="350" height="300" />
+    </a>
+</p>
+<br />
+<p>
+    <a href="">
+        <img src="~/Content/NAPSTER.png" width="350" height="300" />
+    </a>
+</p>
+<br />
