se intodujo un link al href donde estan posicionadas las imagenes que hace que la misma imagen sea un acceso directo a la pagina de musica de que presenta la misma imagen

--- a/TareaProg4/Views/Contenido/Musica.cshtml
+++ b/TareaProg4/Views/Contenido/Musica.cshtml
@@ -7,31 +7,31 @@
 <br />
 
 <p>
-    <a href="">
+    <a href="https://www.apple.com/la/apple-music/">
         <img src="~/Content/apple music.jpg" width="350" height="300" />
     </a>
 </p>
 <br />
 <p>
-    <a href="">
+    <a href="https://groovesharks.org/">
         <img src="~/Content/grooveshark.png" width="350" height="300" />
     </a>
 </p>
 <br />
 <p>
-    <a href="">
+    <a href="https://www.spotify.com/">
         <img src="~/Content/Spotify.png" width="350" height="300" />
     </a>
 </p>
 <br />
 <p>
-    <a href="">
+    <a href="https://www.deezer.com/es/">
         <img src="~/Content/deezer.jpg" width="350" height="300" />
     </a>
 </p>
 <br />
 <p>
-    <a href="">
+    <a href="https://us.napster.com/">
         <img src="~/Content/NAPSTER.png" width="350" height="300" />
     </a>
 </p>
