se añadió un botón en el menú principal en el Layout llamado Filtro de contenidos que dirige al usuario a la vista de Contenido para poder acceder a las diferentes opciones disponibles

--- a/TareaProg4/Views/Shared/_Layout.cshtml
+++ b/TareaProg4/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Formulario", "Formulario", "Form")</li>
                     <li>@Html.ActionLink("Datos del Formulario", "Datos", "Form")</li>
                     <li>@Html.ActionLink("Conversor de unidades", "Opciones", "Conversor")</li>
+                    <li>@Html.ActionLink("Filtro de contenidos", "Index", "Contenido")</li>
                 </ul>
                  
             </div>
