se agregaron los botones para regresar faltantes en cada una de las vistas de los controladores Contenido y PelisCategorias

--- a/TareaProg4/Views/Contenido/Index.cshtml
+++ b/TareaProg4/Views/Contenido/Index.cshtml
@@ -4,11 +4,16 @@
 }
 
 <h2>Contenidos</h2>
+<br />
 
 <p>
-    <a href="/Contenido/Peliculas">Peliculas</a>
+    <h3><a href="/Contenido/Peliculas">Peliculas</a></h3>
 </p>
+<br />
 <p>
-    <a href="/Contenido/Musica">Musica</a>
+    <h3><a href="/Contenido/Musica">Musica</a></h3>
 </p>
-
+<br />
+<p>
+    <h4><a href="/Contenido/Peliculas">Regresar</a></h4>
+</p>
