--- a/TareaProg4/Views/Contenido/Peliculas.cshtml
+++ b/TareaProg4/Views/Contenido/Peliculas.cshtml
@@ -4,19 +4,28 @@
 }
 
 <h2>Peliculas</h2>
+<br />
 
 <p>
-    <a href="/PelisCategorias/Accion">Accion</a>
+    <h3><a href="/PelisCategorias/Accion">Accion</a></h3>
 </p>
+<br />
 <p>
-    <a href="/PelisCategorias/Aventura">Aventura</a>
+    <h3><a href="/PelisCategorias/Aventura">Aventura</a></h3>
 </p>
+<br />
 <p>
-    <a href="/PelisCategorias/Drama">Drama</a>
+    <h3><a href="/PelisCategorias/Drama">Drama</a></h3>
 </p>
+<br />
 <p>
-    <a href="/PelisCategorias/Infantil">Infantil</a>
+    <h3><a href="/PelisCategorias/Infantil">Infantil</a></h3>
 </p>
+<br />
 <p>
-    <a href="/PelisCategorias/Documental">Documental</a>
+    <h3><a href="/PelisCategorias/Documental">Documental</a></h3>
+</p>
+<br />
+<p>
+    <h4><a href="/Contenido/Peliculas">Regresar</a></h4>
 </p>
