Agregue la imagen y los datos personales del integrante Johan.. ajuste el ancho y el alto de estas imagenes. Agregue al menu de la pagina el Index de Acerca De. Hice un nuevo action y su vista llamados Noticias en el controlador Contenido.

--- a/TareaProg4/Views/AcercaDe/Index.cshtml
+++ b/TareaProg4/Views/AcercaDe/Index.cshtml
@@ -5,25 +5,27 @@
 
 <h2>Nosotros</h2>
 
-<img src="~/img/roxanna.jpeg" />
+<img src="~/img/roxanna.jpeg" width="200" height="250" />
 <h3>Nombre: Roxanna Alburquerque</h3>
 <h3>Cedula: 402-1560726-4</h3>
 <h3> Edad: 17</h3>
 <h3>Matricula: 2018-6170</h3>
 <h3>Modulos:</h3>
-<h2>Vinculacion con Facebook</h2>
-<h2>Conversor de unidades: Longitudes y Masa</h2>
-<h2>Lectura de xls</h2>
-<h2>Filtro de contenidos: Musica y Peliculas</h2>
+<h3>1. Formulario de solicitud de empleo</h3>
+<h3>2. Conversor de unidades: Temperatura y Datos</h3>
+<h3>3. Menú Filtro de contenidos </h3>
+<h3>4. Noticias y Acerca de</h3>
+<br />
 
-<img src="" />
-<h3>Nombre: Yohan</h3>
-<h3>Cedula:</h3>
-<h3>Edad:</h3>
-<h3>Matricula:</h3>
+<img src="~/img/yohan.jpeg" width="200" height="250" />
+<h3>Nombre: Johan Manuel Uribe De León</h3>
+<h3>Cedula: 402-2820157-6</h3>
+<h3>Edad: 21</h3>
+<h3>Matricula: 2017-4925</h3>
 <h3>Modulos:</h3>
-<h2>Formulario de solicitud de empleo</h2>
-<h2>Conversor de unidades: Temperatura y Datos</h2>
-<h2>Filtro de contenidos </h2>
-<h2>Noticias y Acerca de</h2>
+<h3>1. Vinculacion con Facebook</h3>
+<h3>2. Conversor de unidades: Longitudes y Masa</h3>
+<h3>3. Lectura de xls</h3>
+<h3>4. Filtro de contenidos: Musica y Peliculas</h3>
+
 
