--- a/TareaProg4/Views/Shared/_Layout.cshtml
+++ b/TareaProg4/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("Datos del Formulario", "Datos", "Form")</li>
                     <li>@Html.ActionLink("Conversor de unidades", "Opciones", "Conversor")</li>
                     <li>@Html.ActionLink("Filtro de contenidos", "Index", "Contenido")</li>
+                    <li>@Html.ActionLink("Nosotros", "Index", "AcercaDe")</li>
                 </ul>
                  
             </div>
