--- a/TareaProg4/Views/Contenido/Index.cshtml
+++ b/TareaProg4/Views/Contenido/Index.cshtml
@@ -6,14 +6,15 @@
 <h2>Contenidos</h2>
 <br />
 
-<p>
-    <h3><a href="/Contenido/Peliculas">Peliculas</a></h3>
-</p>
+<h3><a href="/Contenido/Noticias">Noticias</a></h3>
 <br />
-<p>
-    <h3><a href="/Contenido/Musica">Musica</a></h3>
-</p>
+
+<h3><a href="/Contenido/Peliculas">Peliculas</a></h3>
+
 <br />
-<p>
-    <h4><a href="/Contenido/Peliculas">Regresar</a></h4>
-</p>
+
+<h3><a href="/Contenido/Musica">Musica</a></h3>
+
+<br />
+
+<h4><a href="/Contenido/Peliculas">Regresar</a></h4>
