Guardé las imagenes de los portales de noticias en la carpeta img. Escribi los links a estos portales y la direccion de las imagenes. Agregué la vista Noticias al menú filtro de contenidos. Puse un link llamado Regresar que dirige al menú de filtro de contenidos.

--- a/TareaProg4/Views/Contenido/Noticias.cshtml
+++ b/TareaProg4/Views/Contenido/Noticias.cshtml
@@ -4,7 +4,46 @@
 }
 
 <h2>Noticias</h2>
+<div>
+    <h3>Portales de Noticias Nacionales</h3>
+    <br />
+    <a href="https://listindiario.com/">
+        <img src="~/img/listin.jpg" width="350" height="300" />
+    </a>
+    <a href="https://www.diariolibre.com/">
+        <img src="~/img/diariolibre.png" width="350" height="300" />
+    </a>
+    <a href="https://noticiassin.com/">
+        <img src="~/img/sin.png" width="350" height="300" />
+    </a>
+    <a href="https://hoy.com.do/">
+        <img src="~/img/periodicohoy.jpg" width="350" height="300" />
+    </a>
+    <a href="https://elnacional.com.do/">
+        <img src="~/img/nacional.png" width="350" height="300" />
+    </a>
+</div>
 
-<h3>Portales de Noticias Nacionales</h3>
+<br />
 <h3>Portales de Noticias Internacionales</h3>
+<br />
+<div>
+<a href="https://www.bbc.com/mundo">
+    <img src="~/img/bbc.png" width="350" height="300" />
+</a>
+<a href="https://cnnespanol.cnn.com/">
+    <img src="~/img/cnn.png" width="350" height="300" />
+</a>
+<a href="https://elpais.com/america/">
+    <img src="~/img/pais.jpg" width="350" height="300" />
+</a>
+<a href="https://www.abc.es/internacional/">
+    <img src="~/img/abc.jpg" width="350" height="300" />
+</a>
+<a href="https://www.eitb.eus/es/noticias/internacional/">
+    <img src="~/img/eitb.jpg" width="350" height="300" />
+</a>
+</div>
+
+<a  href="/Contenido/Index"> <h4>Regresar</h4></a>
 
