Se arreglo un problema con el login

--- a/TareaProg4/Views/Shared/_Layout.cshtml
+++ b/TareaProg4/Views/Shared/_Layout.cshtml
@@ -26,8 +26,9 @@
                     <li>@Html.ActionLink("Conversor de unidades", "Opciones", "Conversor")</li>
                     <li>@Html.ActionLink("Filtro de contenidos", "Index", "Contenido")</li>
                     <li>@Html.ActionLink("Nosotros", "Index", "AcercaDe")</li>
+                    
                 </ul>
-                 
+                 @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
